@@ -23,6 +23,8 @@ We want messages to be printed out instead of sending them:
   >>> import re
   >>> from zope import interface, component
   >>> import zope.sendmail.interfaces
+  >>> from email.Header import decode_header
+  >>> from collective.dancing.tests import decodeMessageAsString
 
   >>> class MyMailDelivery(object):
   ...     interface.implements(zope.sendmail.interfaces.IMailDelivery)
@@ -30,10 +32,10 @@ We want messages to be printed out instead of sending them:
   ...
   ...     def send(self, from_, to, message):
   ...         print '*MyMailDelivery sending*:'
-  ...         print 'From:', from_
+  ...         print 'From:', decode_header(from_)[0][0]
   ...         print 'To:', to
   ...         print 'Message follows:'
-  ...         print message
+  ...         print decodeMessageAsString(message)
   ...         self.sent.append(message)
   ... 
   ...     @classmethod
