@@ -16,6 +16,7 @@ this test:
   >>> from zope import interface, component
   >>> import collective.singing.interfaces
   >>> import collective.singing.message
+  >>> from collective.dancing.tests import decodeMessageAsString
 
   >>> class Channel(object):
   ...     def __init__(self, title, url):
@@ -71,9 +72,9 @@ That is, we can use it to retrieve a subscription's secret:
   >>> msg # doctest: +ELLIPSIS
   <collective.singing.message.Message object ...>
   >>> msg.payload # doctest: +ELLIPSIS
-  <email.Message.Message instance ...>
-  >>> print msg.payload.as_string() # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
-  Content-Type: multipart/alternative;...
+  <email.MIMEMultipart.MIMEMultipart instance ...>
+  >>> print decodeMessageAsString(msg.payload) # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
+  Content-Type: multipart/mixed;...
   Subject: Plone site: News for nerds...
   From: Site Administrator <>...
   To: daniel@localhost...
@@ -82,8 +83,8 @@ That is, we can use it to retrieve a subscription's secret:
   >>> msg = composer.render_confirmation(subscription) # doctest: +ELLIPSIS
   >>> msg # doctest: +ELLIPSIS
   <collective.singing.message.Message object ...>
-  >>> print msg.payload.as_string() # doctest: +ELLIPSIS
-  Content-Type: multipart/alternative;...
+  >>> print decodeMessageAsString(msg.payload) # doctest: +ELLIPSIS
+  Content-Type: multipart/mixed;...
   Subject: Confirm your subscription with News for nerds...
   From: Site Administrator <>...
   To: daniel@localhost...
